# SpectraFP

./: pyproject.toml  test_spectra.csv
SpectraFP/: __init__.py  cli.py  numpy_compat.py
spectrafp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
